unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c.object-meta.xml
<CustomObject>
    <label>Onboarding Task</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Tasks #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>