unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Action_Params__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Action_Params__c</fullName>
    <description>Set of params depending upon action type
For Link set this to a URL (HTTPS supported)
For Create record set this to the object name
For Navigate To Object set this value to the Id of the object (relative URLs should be added without a &#39;/&#39; prefix)
For Video set this to the embeddable video link</description>
    <inlineHelpText>Based on Action Type, insert an HTTPS external URL or embeddable video link, record ID, or object name</inlineHelpText>
    <label>Action Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>