unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Link</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Display Video</fullName>
            </value>
            <value>
                <fullName>Navigate to Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>