unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Button_Label__c</fullName>
    <description>Can be used to control the text that appears on the button for each tile. Determines the text that appears as the button label in the community. Partner Users could click into the button to undertake / review the tile.</description>
    <label>Button Label</label>
    <length>75</length>
    <type>Text</type>
</CustomField>