unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Category__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Category__c</fullName>
    <description>Provides a short description that appears on the tile.</description>
    <inlineHelpText>Short summary of tasks, such as Forms or Meet the Team.</inlineHelpText>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>