unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Complete_Task_When_Action_clicked__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Complete_Task_When_Action_clicked__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if clicking into a tile should be deemed as tile action completion.</description>
    <inlineHelpText>Action is considered complete after a member clicks the tile.</inlineHelpText>
    <label>Complete Task When Action clicked?</label>
    <type>Checkbox</type>
</CustomField>