unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Description__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Description__c</fullName>
    <description>Use this field to capture a description of the action/task pertinent to the tile.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>