unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Duration_in_Days__c</fullName>
    <label>Duration (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>