unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Image_Name__c</fullName>
    <inlineHelpText>Complete URL of the tile image</inlineHelpText>
    <label>Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>