unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Onboarding_Plan__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
    <label>Onboarding Plan</label>
    <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>