unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Seq__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Seq__c</fullName>
    <inlineHelpText>Multiple tasks can have the same sequence number if they apply to different audiences.</inlineHelpText>
    <label>Seq #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>