unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Which_roles_is_this_task_for__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Which_roles_is_this_task_for__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <inlineHelpText>Select the audience group the task is applicable for and pick a Seq# accordingly. By default actions are applicable to all audience groups in your partner&#39;s hierarchy if one exists</inlineHelpText>
    <label>Which roles is this task for?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ptnr_Onbd_Fmwk__Partner_Persona</valueSetName>
    </valueSet>
</CustomField>